--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
     </div>
 </div>
 <div id="kontakt">
-    <h2 class="text-center">Kontakt:</h2>
+    <h2 class="text-center">Kontakt a info:</h2>
+    <h5>instituce:</h5>
+    <p><i class="fas fa-school"></i><a href="https://www.sspu-opava.cz/cs/"
+        target="_blank"> Střední škola průmyslová a umělecká Opava</a></p> 
+    <h5>obor:</h5>
+    <p><i class="fab fa-backpack"></i>Informační technologie</p> 
     <h5>GitHub:</h5>
     <p><i class="fab fa-github"></i> <a href="https://github.com/vojtech-zedek"
         target="_blank">vojtech-zedek</a></p>
